fix(action-btn-container-mobile): fix button style and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -912,16 +912,16 @@ transition-duration: .5s;
 
   #action-btn-container {
     width: 5%;
-    right: 20px;
+    right: 15px;
     gap: 20px;
     justify-content: initial;
-    top: 2px;
   }
 
   .complete-btn, .delete-btn {
     width: 40px;
     height: 40px !important;
     border: none !important;
+    background: none;
   }
   
   .complete-btn img, .delete-btn img {
